# learn_hub_aws

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
docs/: access-patterns.md  api-design.md  authentication.md  authorization.md
hello_world/: app.py
scripts/: authenticate_user.sh  create_test_user.sh  decode_jwt_token.sh  read_deployed_cognito_identifiers.sh  test_valid_call_to_courses.sh
src/: requirements.txt
src/core/: cognito_identity.py  constants.py  current_user.py  exceptions.py  responses.py
src/handlers/: courses.py  health.py  post_confirmation.py  provision_user.py  update_course.py
src/models/: authenticated_user.py
src/policies/: course_policy.py
src/repositories/: course_repository.py  user_repository.py
src/schemas/: course.py
src/services/: authentication_service.py  course_service.py  user_provisioning_service.py
src/utils/: responses.py  slugify.py
tests/fakes/: fake_course_repository.py
tests/integration/: test_api_gateway.py
tests/unit/core/: test_responses.py
tests/unit/handlers/: test_handler.py  test_health.py  test_provision_user.py  test_update_course.py
tests/unit/policies/: test_course_policy.py
tests/unit/repositories/: test_course_repository.py  test_user_repository.py
tests/unit/schemas/: test_course_schema.py
tests/unit/services/: test_authentication_service.py  test_course_service.py
