[project]
name="learn-hub"
version="0.1.0"
description="learn hub serverless api"
requires-python=">=3.14.0"

dependencies=[
    "boto3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I"
]
